Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13893

encryption.innodb-redo-badkey failed in buildbot with page cannot be decrypted

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/9687

      encryption.innodb-redo-badkey 'cbc,innodb' w2 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2017-09-20 15:48:54
      line
      2017-09-20 15:48:48 3072805184 [ERROR] InnoDB: The page [page id: space=4, page number=1] in file './test/t1.ibd' cannot be decrypted.
      2017-09-20 15:48:48 2939935552 [ERROR] InnoDB: The page [page id: space=4, page number=2] in file './test/t1.ibd' cannot be decrypted.
      2017-09-20 15:48:49 2939935552 [Warning] InnoDB: Table in tablespace 4 encrypted. However key management plugin or used key_version 0is not found or used encryption algorithm or method does not match. Can't continue opening the table.
      ^ Found warnings in /mnt/buildbot/build/mariadb-10.2.9/mysql-test/var/2/log/mysqld.1.err
      ok
       
       - saving '/mnt/buildbot/build/mariadb-10.2.9/mysql-test/var/2/log/encryption.innodb-redo-badkey-cbc,innodb/' to '/mnt/buildbot/build/mariadb-10.2.9/mysql-test/var/log/encryption.innodb-redo-badkey-cbc,innodb/'
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              elenst Elena Stepanova
              Votes:
              2 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 0.5h
                  1d 0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.